code/typescript/SecurityModeling/v4/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Security Modeling client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v4.0.1-blue)](https://developer.factset.com/api-catalog/security-modeling-api)
[![npm](https://img.shields.io/badge/npm-v2.0.0-orange)](https://www.npmjs.com/package/@factset/sdk-securitymodeling/v/2.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 4.0.1
- SDK version: 2.0.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-securitymodeling@2.0.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-securitymodeling@2.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, SecurityModelingApi } = require('@factset/sdk-securitymodeling');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new SecurityModelingApi();
const opts = {
  'sMDeleteParametersRoot': {"data":[{"securityName":"Bond_Security","location":"Client","asOfDate":"20250101","securityType":"BOND"}]} // SMDeleteParametersRoot | 
};

// Call api endpoint
apiInstance.deleteSecurities(opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-securitymodeling');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/security-modeling/v4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*securitymodeling.SecurityModelingApi* | [**deleteSecurities**](docs/SecurityModelingApi.md#deleteSecurities) | **POST** /securities/delete | Delete existing securities
*securitymodeling.SecurityModelingApi* | [**getFields**](docs/SecurityModelingApi.md#getFields) | **GET** /securities/{securityType}/fields | Get security type fields
*securitymodeling.SecurityModelingApi* | [**getSecurities**](docs/SecurityModelingApi.md#getSecurities) | **POST** /securities/retrieve | Get existing securities
*securitymodeling.SecurityModelingApi* | [**smGetRequestResultById**](docs/SecurityModelingApi.md#smGetRequestResultById) | **GET** /securities/{jobId}/result | Get SM upsert or delete result by id
*securitymodeling.SecurityModelingApi* | [**smGetUpsertStatusById**](docs/SecurityModelingApi.md#smGetUpsertStatusById) | **GET** /securities/{jobId}/status | Get SM upsert or delete status by id
*securitymodeling.SecurityModelingApi* | [**upsertSecurities**](docs/SecurityModelingApi.md#upsertSecurities) | **POST** /securities/upsert | Create or update securities


## Documentation for Models

 - [securitymodeling.APIClientErrorResponse](docs/APIClientErrorResponse.md)
 - [securitymodeling.APIError](docs/APIError.md)
 - [securitymodeling.Error](docs/Error.md)
 - [securitymodeling.ErrorSource](docs/ErrorSource.md)
 - [securitymodeling.RequestStatus](docs/RequestStatus.md)
 - [securitymodeling.RequestStatusRoot](docs/RequestStatusRoot.md)
 - [securitymodeling.SMCreateParameters](docs/SMCreateParameters.md)
 - [securitymodeling.SMCreateParametersRoot](docs/SMCreateParametersRoot.md)
 - [securitymodeling.SMCreateResponse](docs/SMCreateResponse.md)
 - [securitymodeling.SMCreateResponseRoot](docs/SMCreateResponseRoot.md)
 - [securitymodeling.SMCreateResponseRootMeta](docs/SMCreateResponseRootMeta.md)
 - [securitymodeling.SMDeleteParameters](docs/SMDeleteParameters.md)
 - [securitymodeling.SMDeleteParametersRoot](docs/SMDeleteParametersRoot.md)
 - [securitymodeling.SMRetrieveParameters](docs/SMRetrieveParameters.md)
 - [securitymodeling.SMRetrieveParametersRoot](docs/SMRetrieveParametersRoot.md)
 - [securitymodeling.SMRetrieveResponse](docs/SMRetrieveResponse.md)
 - [securitymodeling.SMRetrieveResponseRoot](docs/SMRetrieveResponseRoot.md)
 - [securitymodeling.SMSecurityResponse](docs/SMSecurityResponse.md)
 - [securitymodeling.SMTemplateFieldProperties](docs/SMTemplateFieldProperties.md)
 - [securitymodeling.SMTemplateFieldPropertiesRoot](docs/SMTemplateFieldPropertiesRoot.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
